fix rating, modal login

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<!-- MODAL LOGIN-FORM -->
 	<section class="login-modal">
 		<div class="modal micromodal-slide" id="login-modal" aria-hidden="true">
-			<div class="modal__overlay" tabindex="-1" data-custom-close="modal">
+			<div class="modal__overlay" tabindex="-1" data-custom-close="login-modal">
 				<div class="modal__container" role="dialog" aria-modal="true">
 					<form class="login-modal__form login-form">
 						<h2 class="login-modal__title">Войти</h2>
@@ -85,7 +85,7 @@
 							placeholder="example@gmail.com">
 
 						<label class="login-form__label" for="password">Ваш пароль</label>
-						<input class="login-form__input" type="tel" id="password" name="пароль" placeholder=" пароль">
+						<input class="login-form__input" type="text" id="password" name="пароль" placeholder=" пароль">
 						<a class="login-form__forgot-password" href="#!">Забыли пароль?</a>
 						<div class="modal__footer">
 							<button type="submit" class="login-form__submit">Войти</button>
