login-modal all pages

--- a/card-product.html
+++ b/card-product.html
@@ -33,7 +33,7 @@
 					<a href="tel:" class="header__btn-call">
 						<img src="./images/icons/call.svg" alt="phone ico">
 					</a>
-					<button class="header__btn-login">Войти</button>
+					<button class="header__btn-login" data-micromodal-trigger="login-modal">Войти</button>
 				</div>
 				<!-- NavBtn -->
 				<button class="nav-btn">
@@ -69,6 +69,48 @@
 		</div>
 
 	</header>
+
+
+	<!-- MODAL LOGIN-FORM -->
+	<section class="login-modal">
+		<div class="modal micromodal-slide" id="login-modal" aria-hidden="true">
+			<div class="modal__overlay" tabindex="-1" data-custom-close="login-modal">
+				<div class="modal__container" role="dialog" aria-modal="true">
+					<form class="login-modal__form login-form">
+						<h2 class="login-modal__title">Войти</h2>
+
+						<label class="login-form__label" for="username">Ваша почта</label>
+						<input class="login-form__input" type="text" id="username" name="username"
+							placeholder="example@gmail.com">
+
+						<label class="login-form__label" for="password">Ваш пароль</label>
+						<input class="login-form__input" type="text" id="password" name="пароль" placeholder=" пароль">
+						<a class="login-form__forgot-password" href="#!">Забыли пароль?</a>
+						<div class="modal__footer">
+							<button type="submit" class="login-form__submit">Войти</button>
+
+							<p class="login-form__text">Или войдите используя:</p>
+							<div class="login-form__row">
+								<a class="login-form__link-auth" href="#!">
+									<img src="./images/google.png" alt="google ico auth">
+								</a>
+								<a class="login-form__link-auth" href="#!">
+									<img src="./images/vk.png" alt="vk ico auth">
+								</a>
+								<a class="login-form__link-auth" href="#!">
+									<img src="./images/facebook.png" alt="facebook ico auth">
+								</a>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- //MODAL LOGIN-FORM -->
+
+
+
 
 	<main class="product-card-main" id="scrollUp">
 		<section class="breadcrumbs">
