--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1066,7 +1066,7 @@
 					<a class="footer__political-link" href="#">
 						<span>Политика конфиденциальности</span>
 					</a>
-					<a class="footer__agreement-link" href="#">
+					<a class="footer__agreement-link" href="./user-agreement.html">
 						<span>Пользовательское соглашение</span>
 					</a>
 				</div>
