--- a/card-product.html
+++ b/card-product.html
@@ -6,6 +6,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Fortnite.market</title>
+	<!-- Chatra {literal} -->
+	<script defer>
+		(function (d, w, c) {
+			w.ChatraID = 'ZfknHTkvBCy3MPkSE';
+			var s = d.createElement('script');
+			w[c] = w[c] || function () {
+				(w[c].q = w[c].q || []).push(arguments);
+			};
+			s.async = true;
+			s.src = 'https://call.chatra.io/chatra.js';
+			if (d.head) d.head.appendChild(s);
+		})(document, window, 'Chatra');
+	</script>
+	<!-- /Chatra {/literal} -->
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -109,15 +123,12 @@
 	</section>
 	<!-- //MODAL LOGIN-FORM -->
 
-
-
-
 	<main class="product-card-main" id="scrollUp">
 		<section class="breadcrumbs">
 			<div class="container">
 				<nav aria-label="Breadcrumb" class="breadcrumb">
 					<ul class="breadcrumb__list">
-						<li class="breadcrumb__link"><a href="#">Премиум магазины </a></li>
+						<li class="breadcrumb__link"><a href="#"> Магазин </a></li>
 						<li class="breadcrumb__link"><a href="#">Скины </a></li>
 						<li class="breadcrumb__link breadcrumb__link--current"><span aria-current="page">Снегобой</span>
 						</li>
@@ -511,13 +522,13 @@
 									<div class="payment-form-pay__row">
 										<label for="validy" class="payment-form-pay__validity">
 											<p>Срок действия карты</p>
-											<input class="payment-form__input" type="number" maxlength="5" placeholder="13/25"
-												id="validy">
+											<input class="payment-form__input" type="number" maxlength="5"
+												placeholder="13/25" id="validy">
 										</label>
 										<label for="CVV" class="payment-form-pay__cvc">
 											<p>CVC/CVV код</p>
-											<input class="payment-form__input" type="number" maxlength="3" placeholder="CVC"
-												id="CVV">
+											<input class="payment-form__input" type="number" maxlength="3"
+												placeholder="CVC" id="CVV">
 										</label>
 									</div>
 									<label for="email" class="payment-form-pay__email-sm">
@@ -577,7 +588,8 @@
 				<div class="footer__payment">
 					<p class="footer__payment-text">В данный момент доступны такие типы оплаты:</p>
 					<div class="footer__payment-box">
-						<img class="footer__payment-img" src="./images/icons/perfect_money.svg" alt="perfect_money-icon">
+						<img class="footer__payment-img" src="./images/icons/perfect_money.svg"
+							alt="perfect_money-icon">
 						<img class="footer__payment-img" src="./images/icons/qiwi-crypto.svg" alt="qiwi-crypto-icon">
 						<img class="footer__payment-img" src="./images/icons/yandex-money.svg" alt="yandex-money-icon">
 						<img class="footer__payment-img" src="./images/icons/visa.svg" alt="visa-icon">
