--- a/guarantees.html
+++ b/guarantees.html
@@ -6,6 +6,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>FortNite</title>
+	<!-- Chatra {literal} -->
+	<script defer>
+		(function (d, w, c) {
+			w.ChatraID = 'ZfknHTkvBCy3MPkSE';
+			var s = d.createElement('script');
+			w[c] = w[c] || function () {
+				(w[c].q = w[c].q || []).push(arguments);
+			};
+			s.async = true;
+			s.src = 'https://call.chatra.io/chatra.js';
+			if (d.head) d.head.appendChild(s);
+		})(document, window, 'Chatra');
+	</script>
+	<!-- /Chatra {/literal} -->
+
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 
@@ -70,44 +85,44 @@
 	</header>
 
 
-		<!-- MODAL LOGIN-FORM -->
-		<section class="login-modal">
-			<div class="modal micromodal-slide" id="login-modal" aria-hidden="true">
-				<div class="modal__overlay" tabindex="-1" data-custom-close="login-modal">
-					<div class="modal__container" role="dialog" aria-modal="true">
-						<form class="login-modal__form login-form">
-							<h2 class="login-modal__title">Войти</h2>
-	
-							<label class="login-form__label" for="username">Ваша почта</label>
-							<input class="login-form__input" type="text" id="username" name="username"
-								placeholder="example@gmail.com">
-	
-							<label class="login-form__label" for="password">Ваш пароль</label>
-							<input class="login-form__input" type="text" id="password" name="пароль" placeholder=" пароль">
-							<a class="login-form__forgot-password" href="#!">Забыли пароль?</a>
-							<div class="modal__footer">
-								<button type="submit" class="login-form__submit">Войти</button>
-	
-								<p class="login-form__text">Или войдите используя:</p>
-								<div class="login-form__row">
-									<a class="login-form__link-auth" href="#!">
-										<img src="./images/google.png" alt="google ico auth">
-									</a>
-									<a class="login-form__link-auth" href="#!">
-										<img src="./images/vk.png" alt="vk ico auth">
-									</a>
-									<a class="login-form__link-auth" href="#!">
-										<img src="./images/facebook.png" alt="facebook ico auth">
-									</a>
-								</div>
+	<!-- MODAL LOGIN-FORM -->
+	<section class="login-modal">
+		<div class="modal micromodal-slide" id="login-modal" aria-hidden="true">
+			<div class="modal__overlay" tabindex="-1" data-custom-close="login-modal">
+				<div class="modal__container" role="dialog" aria-modal="true">
+					<form class="login-modal__form login-form">
+						<h2 class="login-modal__title">Войти</h2>
+
+						<label class="login-form__label" for="username">Ваша почта</label>
+						<input class="login-form__input" type="text" id="username" name="username"
+							placeholder="example@gmail.com">
+
+						<label class="login-form__label" for="password">Ваш пароль</label>
+						<input class="login-form__input" type="text" id="password" name="пароль" placeholder=" пароль">
+						<a class="login-form__forgot-password" href="#!">Забыли пароль?</a>
+						<div class="modal__footer">
+							<button type="submit" class="login-form__submit">Войти</button>
+
+							<p class="login-form__text">Или войдите используя:</p>
+							<div class="login-form__row">
+								<a class="login-form__link-auth" href="#!">
+									<img src="./images/google.png" alt="google ico auth">
+								</a>
+								<a class="login-form__link-auth" href="#!">
+									<img src="./images/vk.png" alt="vk ico auth">
+								</a>
+								<a class="login-form__link-auth" href="#!">
+									<img src="./images/facebook.png" alt="facebook ico auth">
+								</a>
 							</div>
-						</form>
-					</div>
+						</div>
+					</form>
 				</div>
 			</div>
-		</section>
-		<!-- //MODAL LOGIN-FORM -->
-	
+		</div>
+	</section>
+	<!-- //MODAL LOGIN-FORM -->
+
 
 
 
