--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		})(document, window, 'Chatra');
 	</script>
 	<!-- /Chatra {/literal} -->
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
