reduced cards/reduced gap

--- a/card-product.html
+++ b/card-product.html
@@ -197,7 +197,7 @@
 								</div>
 							</div>
 							<div class="card-info__buy">
-								<button class="card__btn-buy btn-open" data-micromodal-trigger="modal">Купить</button>
+								<button class="card__btn-buy btn-open" data-micromodal-trigger="payment-modal">Купить</button>
 								<span class="card__price">500 p</span>
 							</div>
 
@@ -361,8 +361,8 @@
 
 	</main>
 
-	<div class="modal micromodal-slide" id="modal" aria-hidden="true">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close data-custom-close="modal">
+	<div class="modal micromodal-slide" id="payment-modal" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close data-custom-close="payment-modal">
 			<div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
 				<main class="modal__content" id="modal-1-content">
 					<form action="#" class="payment-form">
